initial css upload

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
-    <h1>Hello Indy</h1>
+    <h1>About Me</h1>
+    <p>Hello, im Indy Subasic, a Communications Art major at CCSA with 2 years experience with adobe applications (Photoshop, Illustrator, and Indesign), 1 year of visual arts class, 2 years of graphic design class, and1 years Experience with HTML and CSS. Outside of school experience with 5 years of Visual Arts experience, and 4 years guitar experience, 2 years bass experience, 8 years drums experience.</p>
 </body>
 </html>
