--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <title>Indy-Portfolio-website</title>
     <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
+
+
 <body>
-    <h1>About Me</h1>
-    <p>Hello, im Indy Subasic, a Communications Art major at CCSA with 2 years experience with adobe applications (Photoshop, Illustrator, and Indesign), 1 year of visual arts class, 2 years of graphic design class, and1 years Experience with HTML and CSS. Outside of school experience with 5 years of Visual Arts experience, and 4 years guitar experience, 2 years bass experience, 8 years drums experience.</p>
+    <div id="main_contianer">
+        <nav> 
+        <h1>About me</h1>
+        <h1>Classes</h1>
+        <h1>Experience</h1>
+        <h1>Portfolio</h1>
+        </nav>
+    <!-- end of Nav -->
+    <a href="images/Asset 1.png"> <title>Little Photo of Indy</title></a>
+     <header>
+         <h1>About Me</h1>   
+        </header>
+        <div id="About_Me">
+            <p>Hello, im Indy Subasic, a Communications Art major at CCSA with 2 years experience with adobe applications (Photoshop, Illustrator, and Indesign), 1 year of visual arts class, 2 years of graphic design class, and1 years Experience with HTML and CSS. Outside of school experience with 5 years of Visual Arts experience, and 4 years guitar experience, 2 years bass experience, 8 years drums experience.</p>
+        </div>
+        <!-- end of About_Me -->
+    </div>
+    <!-- end of main_contianer -->
 </body>
 </html>
