--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <h1>Portfolio</h1>
         </nav>
     <!-- end of Nav -->
-    <a href="images/Asset 1.png"> <title>Little Photo of Indy</title></a>
+    <img src="images/Asset 1.png" alt="Indy-logo" id="Indy-logo">
+    <!-- end of image -->
      <header>
          <h1>About Me</h1>   
         </header>
@@ -25,6 +26,63 @@
             <p>Hello, im Indy Subasic, a Communications Art major at CCSA with 2 years experience with adobe applications (Photoshop, Illustrator, and Indesign), 1 year of visual arts class, 2 years of graphic design class, and1 years Experience with HTML and CSS. Outside of school experience with 5 years of Visual Arts experience, and 4 years guitar experience, 2 years bass experience, 8 years drums experience.</p>
         </div>
         <!-- end of About_Me -->
+    <header>
+        <h1>Classes</h1>   
+        </header>
+        <div id="Classes">
+            <ul>
+            FIRST YEAR
+            <li>Visual Arts 1</li>
+            <li>Health/Gym</li>
+            <li>Foundations of Digital Design</li>
+            <li>Algebra 1 Honors</li>
+            <li>English 9 Academic</li>
+            <li>Spanish 1</li>
+            <li>Physical Earth Science</li>
+            <li>Civics/Econ</li>
+            </ul>
+            <ul>
+            SECOND YEAR
+            <li>Drivers Ed/SAT Prep/Gym</li>
+            <li>Geomerty Honors</li>
+            <li>Spanish 2</li>
+            <li>AP Seminar</li>
+            <li>Pre AP Bio</li>
+            <li>Processes of Digital Design</li>
+            <li>AP Worldhistory</li>
+            </ul>
+        </div>
+        <!-- end of Classes -->
+    <header>
+    <h1>Experience</h1>   
+    </header>
+    <div id="Experience">
+    <ul>
+        <li>2 years experience Photoshop</li>
+        <li>2 years experience Illustrator</li>
+        <li>2 years experience Indesign</li>
+        <li>1 year of Visual Arts class</li>
+        <li>2 years of Communication arts class</li>
+        <li>1 years experience with HTML and CSS</li>
+        <li>5 years experience of Visual Arts experience</li>
+        <li>4 years guitar experience</li>
+        <li>2 years Bass Guitar experience</li>
+        <li>8 years drums experience</li>
+    </ul>
+    </div>
+     <!-- end of experience -->
+    <header>
+    <h1>Portfolio</h1>   
+    </header>
+    <div id="portfolio">
+        <ul>FIRST YEAR</ul>
+        <img src="images/Subasic.Indy.impossible photography .png" alt="Impossible-Photography" height="365px" width="300px">
+        <img src="images/Doctor-Demolition.png" alt="Doctor-demolition" height="365px" width="440px">
+        <ul>SECOND YEAR</ul>
+        <img src="images/JAR OF FLIES.png" alt="Jar-of-Flies-poster" height="520px" width="305px">
+        <img src="images/Showstopers.png" alt="Showstopers" height="370px" width="510px">
+        <img src="images/Zues website.png" alt="A photo of a previous website ive made" height="465px" width="830">
+    </div>
     </div>
     <!-- end of main_contianer -->
 </body>
