initial css update

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div id="main_contianer">
         <nav> 
-        <h1>About me</h1>
-        <h1>Classes</h1>
-        <h1>Experience</h1>
-        <h1>Portfolio</h1>
+        <ul id="Nav-Junk">
+            <a href="#Indy-logo">About Me</a>
+            <a href="#About_Me">Classes</a>
+            <a href="#Classes">Experience</a>
+            <a href="#Experience">Portfolio</a>
+            </ul>
         </nav>
     <!-- end of Nav -->
     <img src="images/Asset 1.png" alt="Indy-logo" id="Indy-logo">
@@ -74,16 +76,25 @@
     <header>
     <h1>Portfolio</h1>   
     </header>
-    <div id="portfolio">
+    <div id="Portfolio">
+       
+
         <ul>FIRST YEAR</ul>
+         <div id="year1">
         <img src="images/Subasic.Indy.impossible photography .png" alt="Impossible-Photography" height="365px" width="300px">
         <img src="images/Doctor-Demolition.png" alt="Doctor-demolition" height="365px" width="440px">
+        </div>
         <ul>SECOND YEAR</ul>
-        <img src="images/JAR OF FLIES.png" alt="Jar-of-Flies-poster" height="520px" width="305px">
+        <div id="year2">
+        <img src="images/JAR OF FLIES.png" alt="Jar-of-Flies-poster" height="390px" width="228.75px">
         <img src="images/Showstopers.png" alt="Showstopers" height="370px" width="510px">
+        </div id="zues-web">
+        <div>
         <img src="images/Zues website.png" alt="A photo of a previous website ive made" height="465px" width="830">
+        </div>
     </div>
     </div>
     <!-- end of main_contianer -->
+    
 </body>
 </html>
