--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
     </div>
     </div>
     <!-- end of main_contianer -->
-    
+    <div id="fence-man">
+    <img class="guy-fence" src="images/fence manpng.png" alt="this is the fence man" height="150px" width="375px">
+    <img class="transition-image" src="images/fence-man-caught.png" alt="hes been caught" height="150px" width="375px">
+    </div>
 </body>
 </html>
