--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- end of Nav -->
     <img src="images/Asset 1.png" alt="Indy-logo" id="Indy-logo">
     <!-- end of image -->
+    
      <header>
          <h1>About Me</h1>   
         </header>
@@ -91,6 +92,8 @@
         </div id="zues-web">
         <div>
         <img src="images/Zues website.png" alt="A photo of a previous website ive made" height="465px" width="830">
+        <img src="images/1.png" alt="1" height="465px" width="830" >
+
         </div>
     </div>
     </div>
